--- a/webroot/index.html
+++ b/webroot/index.html
@@ -10,9 +10,9 @@
 <script type="text/javascript" src="js/virtualjoystick.js"></script>
 
 <script type="text/javascript" type="text/javascript">
-	var ros = new ROSLIB.Ros({
-		url : 'ws://192.168.0.1:9090'
-	});
+	 var ros = new ROSLIB.Ros({
+	 	url : 'ws://192.168.0.1:9090'
+	 });
 
 	ros.on('connection', function() {
 		console.log('Connected to websocket server.');
@@ -32,10 +32,6 @@
 		name : '/mobile_base/commands/velocity',
 		messageType : 'geometry_msgs/Twist'
 	});
-
-	
-
-
 
 
 
@@ -92,50 +88,26 @@
 	// maxVelX.get(function(value) {
 	//   console.log('MAX VAL: ' + value);
 	// });
-
-
-	function forward(speed){
-		var twist = new ROSLIB.Message({
-			linear : {
-				x : speed,
-				y : 0.0,
-				z : 0.0
-			},
-			angular : {
-				x : 0.0,
-				y : 0.0,
-				z : 0.0
-			}
-		});
-		cmdVel.publish(twist);
-	}
-	function turn(dir){
-		var twist = new ROSLIB.Message({
-			linear : {
-				x : 0.05,
-				y : 0.0,
-				z : 0.0
-			},
-			angular : {
-				x : dir,
-				y : dir,
-				z : dir
-			}
-		});
-		cmdVel.publish(twist);
-	}
 </script>
 <style>
+	body{
+		padding: 0;
+		margin: 0;
+	}
 	button{
 		width: 70px;
 		height: 70px;
 	}
 
 	#stick{
-		width: 500px;
-		height: 500px;
-		border: solid 2px black;
-		background-color: #eee;
+		width: 100vw;
+		height: 100vh;
+		background-color: #cfc;
+	}
+	#main{
+		position: fixed;
+		top: 0;
+		left: 0;
 	}
 
 </style>
@@ -143,65 +115,76 @@
 
 <body>
 	<div id="stick"></div>
-	<div id="stickinfo"></div>
+	<div id="main">
+		
+	</div>
 	<script type="text/javascript">
 		$(document).ready(function() {
+
+			var stickMaxAmpli = 200;
+			var sender = null;
 
 			var joystick = new VirtualJoystick({
 				container: document.getElementById('stick'),
 				mouseSupport: true,
 				limitStickTravel: true,
-				stickRadius: 100,
+				stickRadius: stickMaxAmpli,
 				strokeStyle: 'black'
 			});
-			joystick.addEventListener('touchStart', function(){
-				console.log('down')
-			})
-			joystick.addEventListener('touchEnd', function(){
-				console.log('up')
-			})
-			setInterval(function(){
-				var outputEl = document.getElementById('stickinfo');
+			
+									  
+									  
+			var joyStart = function(){
+				sender = setInterval(function(){
+					var ampli = Math.sqrt(
+						 joystick.deltaX()*joystick.deltaX()
+						+joystick.deltaY()*joystick.deltaY());
 
-				var angle = Math.atan2(joystick.deltaY(), joystick.deltaX())*180.0/Math.PI+90;
-				if(angle>180)angle-=360;
-
-				var ampli = Math.sqrt(joystick.deltaY()*joystick.deltaY()+joystick.deltaX()*joystick.deltaX());
-
-				if(ampli>10){
-					outputEl.innerHTML = 
-						"angle="+angle+"<br/>"+
-						"ampli="+ampli;
-
-						var twist = new ROSLIB.Message({
+					var linspeed = -joystick.deltaY()/(2*stickMaxAmpli);
+					var angspeed = -joystick.deltaX()/(stickMaxAmpli/2);
+					var twist = new ROSLIB.Message({
 						linear : {
-							x : -joystick.deltaY()/200,
+							x : linspeed,
 							y : 0.0,
 							z : 0.0
 						},
 						angular : {
-							x : -angle/90,
-							y : -angle/90,
-							z : -angle/90
+							x : angspeed,
+							y : angspeed,
+							z : angspeed
 						}
 					});
 					cmdVel.publish(twist);
+				}, 100);
+			};
+			var joyEnd = function(){
+				/*console.log('end');*/
+				if(sender){
+					clearInterval(sender);
+					sender = null;
 				}
-				else{
-					outputEl.innerHTML = 
-						"angle=n/a<br/>"+
-						"ampli=n/a";
-				}
-			}, 100);
-
+				var twist = new ROSLIB.Message({
+					linear : {
+						x : 0.0,
+						y : 0.0,
+						z : 0.0
+					},
+					angular : {
+						x : 0.0,
+						y : 0.0,
+						z : 0.0
+					}
+				});
+				cmdVel.publish(twist);
+			};
+			
+			joystick._container.addEventListener('touchstart', joyStart);
+			joystick._container.addEventListener('mousedown', joyStart);
+			joystick._container.addEventListener('touchEnd', joyEnd);
+			joystick._container.addEventListener('mouseup', joyEnd);
 		});
 	</script>
 
 
-	<table>
-		<tr><td></td><td><button onmousedown="forward(0.2)">Forward</button></td><td></td></tr>
-		<tr><td><button onmousedown="turn(2)">Left</button></td><td></td><td><button  onmousedown="turn(-2)">Right</button></td></tr>
-		<tr><td></td><td><button onmousedown="forward(-0.2)">Backward</button></td><td></td></tr>
-	</table>
 </body>
 </html>
