Reactivated stick canvas

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -141,6 +141,7 @@
 		}
 		#stream{
 			background-color: rgba(0,0,0,0.3);
+			max-width: 100vw;
 			max-height: 50vh;
 		}
 
@@ -148,7 +149,7 @@
 </head>
 
 <body>
-	<!--<div id="stick"></div>-->
+	<div id="stick"></div>
 	<div id="main">
 		<div id="statusbar">
 			<div id="status" class="closed">
